# ncserver

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.rst  make.py  readme.rst
config/: .ncserver.yaml  generate_config.py  ncserver.sln  ncserver.vcxproj  ncserver.vcxproj.filters  ncserver_test.vcxproj  ncserver_test.vcxproj.filters
config/cmake/: cmakeClean.sh
dependency/nginx-1.7.2/conf/: nginx.conf
docs/: README.chs.rst  design.vsdx  tutorial.rst
example/: CMakeLists.txt  ReadMe.rst  echo.cpp  echo.vcxproj  echo.vcxproj.filters  test.py
fastcgi/include/: fcgi_stdio.h  fcgios.h
fastcgi/libfcgi/: fcgi_stdio.c  fcgiapp.c  fcgio.cpp
gtest/: gtest-all.cc
include/: mutable_service_io.h  nc_log.h  ncserver.h
include/ncserver/: mutable_service_io.h  nc_log.h
src/: fcgi_bind.cpp  fcgi_bind.h  fcgi_service_io.cpp  fcgi_service_io.h  log.h  log_util.cpp  log_util.h  mutable_service_io.cpp  nc_log.cpp  nc_log.h  ncserver.cpp  static_string_map.cpp  stdafx.cpp  stdafx.h  util.cpp  util.h
test/: CMakeLists.txt  main.cpp  mutable_service_io_unittest.cpp  nc_logger_unittest.cpp  request_unittest.cpp  stdafx.cpp  stdafx.h
usr/share/ncserver/: .ncserver.yaml
